# gensol-banff-processor

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: build.yml  main.yml  pages.yml  scan.yml  test.yml
docs/en/: index.md  metadata-tables.md  migrating-from-sas-python.md  process-blocks-and-controls.md  processor-user-guide.md  release-notes.md
docs/fr/: index.md  migrating-from-sas-python.md  process-blocks-and-controls.md  processor-user-guide.md  release-notes.md
docs/html/: .buildinfo  banffprocessor.exceptions.html  banffprocessor.html  banffprocessor.metadata.html  banffprocessor.metadata.models.html  banffprocessor.nls.html  banffprocessor.procedures.banff_procedures.html  banffprocessor.procedures.html  banffprocessor.processor_logger.html  banffprocessor.util.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/.doctrees/: banffprocessor.doctree  banffprocessor.exceptions.doctree  banffprocessor.metadata.doctree  banffprocessor.metadata.models.doctree  banffprocessor.nls.doctree  banffprocessor.procedures.banff_procedures.doctree  banffprocessor.procedures.doctree  banffprocessor.processor_logger.doctree  banffprocessor.util.doctree  environment.pickle  index.doctree  modules.doctree
docs/html/_modules/: banffprocessor.html  index.html
docs/html/_sources/: banffprocessor.exceptions.rst.txt  banffprocessor.metadata.models.rst.txt  banffprocessor.metadata.rst.txt  banffprocessor.nls.rst.txt  banffprocessor.procedures.rst.txt  (+6 more)
examples/example1/: processor_input.json  run_banffprocessor_example_1.py  run_banffprocessor_example_1_no_json.py
examples/example2/: processor_input.json  run_banffprocessor_example_2.py
examples/example3/: processor_input.json  run_banffprocessor_example_3.py
examples/example4/: processor_input.json  run_banffprocessor_example_4.py
examples/excel_to_xml_conversion/: Banff_2.08_Processor_Tutorial.xlsx  run_convert_excel_to_xml.py
examples/plugins/: add_excluded_data.py  create_new_file.py  exclude_data.py  increment_field.py  modify_variable.py  round_data.py  save_parquet.py
scripts/gettext/: nls_update_mo.sh  nls_update_po.sh  nls_variables.sh
src/banffprocessor/: processor.py  processor_data.py  processor_input.py
tests/integration_tests/: conftest.py  test_integration.py
tests/unit_tests/: conftest.py  test_metadata_excel_to_xml.py  test_units.py
(+295 files in other folders)
